ey-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ey-deployment
  namespace: eli-ns
  labels:
    app: ey
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  selector:
    matchLabels:
      app: ey
  template:
    metadata:
      labels:
        app: ey
    spec:
      containers:
        - name: ey-container
          image: muralisocial123/ey-cart:v1.1.0
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"

---

apiVersion: v1
kind: Service
metadata:
  name: ey-service
  namespace: eli-ns
spec:
  selector:
    app: ey
  ports:
    - port: 3001  # this is a service port number we're using to expose the application to the internet
      targetPort: 3000
      protocol: TCP
  type: NodePort
