fitness-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitness-deployment
  namespace: eli-ns
  labels:
    app: fitness
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  selector:
    matchLabels:
      app: fitness
  template:
    metadata:
      labels:
        app: fitness
    spec:
      containers:
        - name: fitness-container
          image: muralisocial123/fitness-app:v1.0.1
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"

---

apiVersion: v1
kind: Service
metadata:
  name: fitness-service
  namespace: eli-ns
spec:
  selector:
    app: fitness
  ports:
    - port: 3001  # this is a service port number we're using to expose the application to the internet
      targetPort: 5000
      protocol: TCP
  type: NodePort
