flower-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flower-deployment
  namespace: eli-ns
  labels:
    app: flower
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  selector:
    matchLabels:
      app: flower
  template:
    metadata:
      labels:
        app: flower
    spec:
      containers:
        - name: flower-container
          image: muralisocial123/kyndrl-flower-app:v1.1.0
          ports:
            - containerPort: 3015
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"

---

apiVersion: v1
kind: Service
metadata:
  name: flower-service
  namespace: eli-ns
spec:
  selector:
    app: flower
  ports:
    - port: 3001  # this is a service port number we're using to expose the application to the internet
      targetPort: 3015
      protocol: TCP
  type: NodePort
