flower-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flower-route
  namespace: eli-ns
spec:
  parentRefs:
  - name: ms-gateway
  rules:
  - matches:
      - path:
          type: PathPrefix
          value: /
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
      - name: flower-service
        port: 3001
